// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`veDropdown > render normal 1`] = `
<dl class="ve-dropdown">
  <dt class="ve-dropdown-dt"><a class="" style="width: 90px;">
      <div>click me</div>
    </a></dt>
  <div style="display: none;">
    <dd class="ve-dropdown-dd">
      <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx;">
        <!---->
        <div>
          <div class="ve-dropdown-items-warpper" style="max-height: 1000px;">
            <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Apple</a></li>
            <li class="ve-dropdown-items-li active"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Orange</a></li>
            <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left">Banana</a></li>
          </div>
          <li class="ve-dropdown-operation"><a href="javascript:void(0)" class="ve-dropdown-operation-item">reset</a><a class="ve-dropdown-operation-item" href="javascript:void(0)">filter</a></li>
        </div>
      </ul>
    </dd>
  </div>
</dl>
`;

exports[`veDropdown > render with checkbox 1`] = `
<dl class="ve-dropdown">
  <dt class="ve-dropdown-dt"><a class="" style="width: 90px;">
      <div>click me</div>
    </a></dt>
  <div style="display: none;">
    <dd class="ve-dropdown-dd">
      <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx;">
        <!---->
        <div>
          <div class="ve-dropdown-items-warpper" style="max-height: 1000px;">
            <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content"><input class="ve-checkbox-input" type="checkbox" value="Apple"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Apple</span></label></li>
            <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content ve-checkbox-checked"><input class="ve-checkbox-input" type="checkbox" value="Orange"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Orange</span></label></li>
            <li class="ve-dropdown-items-multiple ve-dropdown-items-li ve-dropdown-items-li-a-left"><label class="ve-checkbox" style="display: inline-block;"><span class="ve-checkbox-content"><input class="ve-checkbox-input" type="checkbox" value="Banana"><span class="ve-checkbox-inner"></span></span><span class="ve-checkbox-label">Banana</span></label></li>
          </div>
          <li class="ve-dropdown-operation"><a href="javascript:void(0)" class="ve-dropdown-operation-item">reset</a><a class="ve-dropdown-operation-item" href="javascript:void(0)">filter</a></li>
        </div>
      </ul>
    </dd>
  </div>
</dl>
`;

exports[`veDropdown > render with radio 1`] = `
<dl class="ve-dropdown">
  <dt class="ve-dropdown-dt"><a class="" style="width: 90px;">
      <div>click me</div>
    </a></dt>
  <div style="display: none;">
    <dd class="ve-dropdown-dd">
      <ul class="ve-dropdown-items" style="min-width: 90px; max-width: Infinitypx;">
        <!---->
        <div>
          <div class="ve-dropdown-items-warpper" style="max-height: 1000px;">
            <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input class="ve-radio-input" type="radio"><span class="ve-radio-inner"></span></span><span class="ve-radio-label">Apple</span></label></a></li>
            <li class="ve-dropdown-items-li active"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container ve-radio-checked"><input class="ve-radio-input" type="radio"><span class="ve-radio-inner"></span></span><span class="ve-radio-label">Orange</span></label></a></li>
            <li class="ve-dropdown-items-li"><a href="javascript:void(0);" class="ve-dropdown-items-li-a ve-dropdown-items-li-a-left"><label class="ve-radio"><span class="ve-radio-container"><input class="ve-radio-input" type="radio"><span class="ve-radio-inner"></span></span><span class="ve-radio-label">Banana</span></label></a></li>
          </div>
          <li class="ve-dropdown-operation"><a href="javascript:void(0)" class="ve-dropdown-operation-item">reset</a><a class="ve-dropdown-operation-item" href="javascript:void(0)">filter</a></li>
        </div>
      </ul>
    </dd>
  </div>
</dl>
`;
